<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_helper</name>
  <version>0.1.3</version>
  <description>Terminal-first helper tools for ROS 2</description>
  <maintainer email="7nbaek@gmail.com">Namheon Baek</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://github.com/codevilot/ros2-helper</url>
  <url type="repository">https://github.com/codevilot/ros2-helper.git</url>
  <url type="bugtracker">https://github.com/codevilot/ros2-helper/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>ros2service</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>chafa</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
